crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rlp3efgh partition of rlp3 for values in ('ef', 'gh');"
---
CreateStmt@0..67
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "rlp3efgh"
  Whitespace@21..22 " "
  Partition@22..31 "partition"
  Whitespace@31..32 " "
  Of@32..34 "of"
  Whitespace@34..35 " "
  RangeVar@35..39
    Ident@35..39 "rlp3"
  Whitespace@39..40 " "
  For@40..43 "for"
  Whitespace@43..44 " "
  Values@44..50 "values"
  Whitespace@50..51 " "
  PartitionBoundSpec@51..65
    InP@51..53 "in"
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    AConst@55..59
      Sconst@55..59 "'ef'"
    Ascii44@59..60 ","
    Whitespace@60..61 " "
    AConst@61..65
      Sconst@61..65 "'gh'"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

