crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@385.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: insert into tbl1 values (10000);
---
InsertStmt@0..32
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..16
    Ident@12..16 "tbl1"
  Whitespace@16..17 " "
  SelectStmt@17..30
    Values@17..23 "values"
    Whitespace@23..24 " "
    Ascii40@24..25 "("
    List@25..30
      AConst@25..30
        Iconst@25..30 "10000"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

