crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@391.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table part_cab (c int not null, a int not null, b int not null) partition by list (c);"
---
CreateStmt@0..93
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "part_cab"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..37
    Ident@23..24 "c"
    Whitespace@24..25 " "
    TypeName@25..28
      IntP@25..28 "int"
    Whitespace@28..29 " "
    Constraint@29..37
      Not@29..32 "not"
      Whitespace@32..33 " "
      NullP@33..37 "null"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  ColumnDef@39..53
    Ident@39..40 "a"
    Whitespace@40..41 " "
    TypeName@41..44
      IntP@41..44 "int"
    Whitespace@44..45 " "
    Constraint@45..53
      Not@45..48 "not"
      Whitespace@48..49 " "
      NullP@49..53 "null"
  Ascii44@53..54 ","
  Whitespace@54..55 " "
  ColumnDef@55..69
    Ident@55..56 "b"
    Whitespace@56..57 " "
    TypeName@57..60
      IntP@57..60 "int"
    Whitespace@60..61 " "
    Constraint@61..69
      Not@61..64 "not"
      Whitespace@64..65 " "
      NullP@65..69 "null"
  Ascii41@69..70 ")"
  Whitespace@70..71 " "
  PartitionSpec@71..91
    Partition@71..80 "partition"
    Whitespace@80..81 " "
    By@81..83 "by"
    Whitespace@83..84 " "
    Ident@84..88 "list"
    Whitespace@88..89 " "
    Ascii40@89..90 "("
    PartitionElem@90..91
      Ident@90..91 "c"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

